# daily_report

./: .gitignore  FIX_SQLITE_NETWORK.md  NETWORK_DB_SOLUTIONS.md  QUICK_FIX_PATCHES.py  README.md  main.py  pyproject.toml  test_db_network.py  x-debug_segments.txt  x-output.txt  x.py
src/: __init__.py  __main__.py  app.py  entrypoint.py
src/components/: __init__.py  card_panel.py  history_table.py  metrics_table.py  qr_code_dialog.py  report_editor.py  report_list_view.py  settings_dialog.py  sidebar.py  stops_table.py  target_editor.py
src/core/: __init__.py  context.py  errors.py  logging.py  safe.py
src/services/: __init__.py  config_service.py  history_db_adapter.py  history_db_service.py  history_schema.py  history_service.py  local_sync_db_service.py  network_safe_db.py  spa_client.py  spa_extract.py  spa_facade.py  spa_processor.py  spa_service.py
src/utils/: __init__.py  file_lock.py  helpers.py  theme.py  ui_helpers.py
tools/: import_history_csv_to_db.py
