[project]
name = "daily-report"
version = "0.1.0"
description = "Aplikasi untuk generate report dari data web (SPA)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Riyan Ardyanto", email = "riyanardyanto@gmail.com" }
]
dependencies = [
  "flet==0.28.3",
  "httpx>=0.28.1",
  "httpx-ntlm>=1.4.0",
  "lxml>=6.0.2",
  "pandas>=2.3.3",
  "pillow>=11.3.0",
  "pip>=25.3",
  "qrcode>=7.4.2",
  "tabulate>=0.9.0",
  "tomli>=2.0.1",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Daily Report"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[project.optional-dependencies]
dev = [
  "flet[all]==0.28.3"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]
